# santa2023

./: .gitignore  Generator_Decomposition.ipynb  README.md  santa.ipynb  tryingstuff.ipynb
cpp/RCube/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run.sh
data/: analyze.ipynb  baseline.csv  coloured_schreier_sims.ipynb  gap_parser.ipynb  solutions.csv  stats.ipynb  submission_new.csv  submission_schnack.csv  target.csv  validate_csv.py
data/bases/: cube_4_4_4.csv  globe_1_8.csv  globe_3_4.csv  wreath_12_12.csv  wreath_21_21.csv  wreath_33_33.csv  wreath_6_6.csv  wreath_7_7.csv
data/cycles/: cube_4_4_4_mus.csv  globe_2_6_2c.csv  globe_2_6_3c.csv  globe_3_4_3c.csv  (+4 more)
perms-nim/: minkwitz.nim  permgroup.nim  santa2023  santa2023.nim
python/: Generator_Decomposition.ipynb
rust/santa-solver/: Cargo.toml  script.g  something.md  todo.md
rust/santa-solver/santa-solver-lib/: Cargo.toml
rust/santa-solver/santa-solver-lib/src/: groups.rs  kalka_teicher_tsaban.rs  ktt_solver.rs  lib.rs  permutation.rs  puzzle.rs  testing_utils.rs
rust/santa-solver/src/: Config.rs  call_cpp_solver.sh  conjugated_search.rs  groups.rs  kalka_teicher_tsaban.rs  ktt_solver.rs  lib.rs  main.rs  minkwitz.rs  minkwitz_optimized.rs  minkwitz_search.rs  permutation.rs  puzzle.rs  schreier.rs  split_cycles.rs  testing_utils.rs  wreath.rs
rust/santa-solver/src/coordinate_calc/: cube.rs  get_coords.rs  globe.rs  mod.rs
rust/santa-solver/src/cubes/: kociemba.rs
rust/santa-solver/src/iterators/: depth_limited.rs  iterative_deepening.rs  mod.rs
trying_stuff/: santa.ipynb
(+754 files in other folders)
