[package]
name = "santa-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
rand = "0.6.4"
env_logger = "0.10.0"
ctrlc2 = "3.5.6"
csv = "1.3.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
bloomfilter = "1.0.13"
bincode = "1.3.3"
rust-schreier = { path = "../rust-schreier-sims"}

[lib]
name = "santa_solver_lib"
path = "src/lib.rs"

