[package]
name = "santa-solver-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
log = "0.4.20"
env_logger = "0.10.0"
ctrlc2 = "3.5.6"